src/objects/IPM_Company_Card__c.object
<CustomObject>
    <description>This object store company cards details</description>
    <fields>
        <fullName>Business_partner_users__c</fullName>
        <label>Business partner users</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IPM_Business_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to store business partner user name</description>
        <label>Business Partner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IPM_Company_Card</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Category_Count__c</fullName>
        <description>Count all category</description>
        <formula>If(includes(IPM_Managed_Category__c, &apos;Household Care&apos;), 1, 0) +
If(includes(IPM_Managed_Category__c, &apos;Laundry&apos;), 1, 0) + 
If(includes(IPM_Managed_Category__c, &apos;Savoury&apos;), 1, 0) + 
If(includes(IPM_Managed_Category__c, &apos;Ice Cream&apos;), 1, 0) +
If(includes(IPM_Managed_Category__c, &apos;Hair Care&apos;), 1, 0) +
If(includes(IPM_Managed_Category__c, &apos;Spreads&apos;), 1, 0) +
If(includes(IPM_Managed_Category__c, &apos;Tea and Soy &amp; Fruit Beverages&apos;), 1, 0) +
If(includes(IPM_Managed_Category__c, &apos;Skin Care&apos;), 1, 0) +
If(includes(IPM_Managed_Category__c, &apos;Skin Cleansing&apos;), 1, 0) +
If(includes(IPM_Managed_Category__c, &apos;Dressings&apos;), 1, 0) +
If(includes(IPM_Managed_Category__c, &apos;Oral Care&apos;), 1, 0) +
If(includes(IPM_Managed_Category__c, &apos;Deodorants &amp; Fragrances&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_CompanyCard_Type__c</fullName>
        <description>store company type</description>
        <label>Company Type</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Company_HQ_Country__c</fullName>
        <description>to store company head quarter name</description>
        <label>Company H.Q (Country)</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Company_IPM_Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to store company champion</description>
        <label>Company IPM Champion</label>
        <referenceTo>IPM_User_Profile__c</referenceTo>
        <relationshipLabel>IPM Company Card (Company IPM Champion)</relationshipLabel>
        <relationshipName>IPM_Company_Card1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Company_Turnover__c</fullName>
        <description>to store company turn over</description>
        <label>Company Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPM_Company_Type__c</fullName>
        <description>to store company type as company or central unit</description>
        <label>Company Type</label>
        <picklist>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Currency__c</fullName>
        <description>to store currency type</description>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CYP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Geographical_Region__c</fullName>
        <description>to store geographical region</description>
        <label>Geographical Region</label>
        <picklist>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montserrat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands Antilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puerto Rico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saint Barthelemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saint Kitts and Nevis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saint Lucia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saint Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sint Maarten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St Vincent and the Grenadines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trinidad and Tobago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turks and Caicos Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virgin Islands, British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virgin Islands, U.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Salvador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French Guiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guatemala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guyana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honduras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nicaragua</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Geographical_Scope__c</fullName>
        <description>to store geographical scope</description>
        <label>Geographical Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montserrat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands Antilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puerto Rico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saint Barthelemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saint Kitts and Nevis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saint Lucia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saint Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sint Maarten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St Vincent and the Grenadines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trinidad and Tobago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turks and Caicos Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virgin Islands, British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virgin Islands, U.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Salvador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French Guiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guatemala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guyana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honduras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nicaragua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panama</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_IC_Category__c</fullName>
        <description>to store IC category</description>
        <label>IC Category(ies)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_IC_Type__c</fullName>
        <description>to store IC type</description>
        <label>IC Type</label>
        <picklist>
            <picklistValues>
                <fullName>GIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_IC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Inoplan_Region__c</fullName>
        <description>to store inoplan region value</description>
        <label>Inoplan Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia/AMET Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/AMET HPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe HPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPCLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPCNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UFLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UFNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unilever Foodsolutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_MCO__c</fullName>
        <description>to store managed category</description>
        <label>MCO</label>
        <picklist>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benelux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East and Southern Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong,Korea &amp; Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia &amp; Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico &amp; Greater Carribean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nigeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nordic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pakistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Cone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sri Lanka</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Managed_Category__c</fullName>
        <description>to store company card category</description>
        <label>Managed Category</label>
        <picklist>
            <picklistValues>
                <fullName>Savoury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ice Cream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spreads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dressings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hair Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deodorants &amp; Fragrances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tea and Soy &amp; Fruit Beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee &amp; Snacks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Purification Category</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IPM_Market_Cluster__c</fullName>
        <description>to store market cluster value</description>
        <label>Market Cluster</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAMET &amp; RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Asia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Name_Suffix__c</fullName>
        <description>to store project name suffix</description>
        <label>Project Name Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Total_OpCo_Turnover__c</fullName>
        <description>to store total company turnover</description>
        <label>Total OpCo Turnover (&apos;000s Euros)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPM_TxtGeographical_Scope__c</fullName>
        <description>to store geographical scope values as Global or market cluster or countries names</description>
        <label>Geographical Scope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Unique_Company_Card_Name__c</fullName>
        <description>to store value as unique company card</description>
        <externalId>true</externalId>
        <label>Unique Company Card Name</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IPP_Company_Type__c</fullName>
        <description>store company type</description>
        <label>Company Type</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>IPM Company Card</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IPM_TxtGeographical_Scope__c</columns>
        <columns>IPM_Managed_Category__c</columns>
        <columns>IPM_Market_Cluster__c</columns>
        <columns>IPM_MCO__c</columns>
        <columns>IPM_Company_Turnover__c</columns>
        <columns>IPM_Total_OpCo_Turnover__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>IPM_Currency__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>IPM Company Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IPM Company Card</pluralLabel>
    <recordTypes>
        <fullName>IPM_Global_Company_Card</fullName>
        <active>true</active>
        <label>Global Company Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>IPM_Local_Company_Card</fullName>
        <active>true</active>
        <label>Local Company Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>IPM_Regional_Company_Card</fullName>
        <active>true</active>
        <label>Regional Company Card</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>IPM_EditCompanyCategory</fullName>
        <active>true</active>
        <errorConditionFormula>AND((CONTAINS(RecordType.Name, &apos;Global&apos;) || CONTAINS(RecordType.Name, &apos;Regional&apos;)) &amp;&amp; IPM_Category_Count__c &gt;1)</errorConditionFormula>
        <errorDisplayField>IPM_Managed_Category__c</errorDisplayField>
        <errorMessage>You have selected more than one category</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IPM_EditGeographicalScope</fullName>
        <active>true</active>
        <errorConditionFormula>AND((CONTAINS(RecordType.Name, &apos;Global&apos;) || CONTAINS(RecordType.Name, &apos;Regional&apos;)) &amp;&amp; CONTAINS( IPM_TxtGeographical_Scope__c , &apos;;&apos;) )</errorConditionFormula>
        <errorDisplayField>IPM_TxtGeographical_Scope__c</errorDisplayField>
        <errorMessage>Please enter valid geographical scope for global or regional company card</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IPM_EditRecordType</fullName>
        <active>false</active>
        <errorConditionFormula>AND($Profile.Name  !=&apos;System Administrator&apos; &amp;&amp;  (ISCHANGED(RecordTypeId)))</errorConditionFormula>
        <errorMessage>Only system admin can change the record type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IPM_GeoScopeValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(Contains(RecordType.Name,&apos;Regional&apos;),Contains(RecordType.Name,&apos;Global&apos;)), ISBLANK(IPM_TxtGeographical_Scope__c))</errorConditionFormula>
        <errorDisplayField>IPM_TxtGeographical_Scope__c</errorDisplayField>
        <errorMessage>Geographical Scopeis required field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IPM_LocalCompanyCard</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Contains(RecordType.Name,&apos;Local&apos;),OR( ISBLANK(IPM_TxtGeographical_Scope__c),ISBLANK( text(IPM_Market_Cluster__c )),ISBLANK(text(IPM_MCO__c )) ))</errorConditionFormula>
        <errorMessage>Geographical Scope,Market Cluster and MCO are required field</errorMessage>
    </validationRules>
</CustomObject>